# wave-sim

./: .gitignore  README.md  wave-eq.cpp
solver/: CMakeLists.txt  solver.cpp
wave-sim/: CMakeLists.txt
wave-sim/include/classes/: element-matrix.h  gather-matrix.h  global-matrix.h  mesh-class.h  mesh-utils.h  project-operator.h  shape-function.h  solver.h
wave-sim/src/: main.cpp
wave-sim/src/classes/: element-matrix.cpp  gather-matrix.cpp  global-matrix.cpp  mesh-class.cpp  mesh-utils.cpp  project-operator-analysis.cpp  project-operator-utils.cpp  project-operator.cpp  shape-function.cpp  solver.cpp
